--- a/package.json
+++ b/package.json
@@ -1,9 +1,32 @@
 {
   "dependencies": {
-    "@supabase/supabase-js": "^2.47.2",
-    "next": "^15.0.4",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "geist": "^1.2.1",
+    "lucide-react": "^0.456.0",
+    "next": "latest",
+    "next-themes": "^0.4.3",
+    "prettier": "^3.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.14",
+    "postcss": "8.4.49",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss": "3.4.14",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.6.3"
   },
   "name": "redemption-tournament-tracker",
   "description": "",
