add decklist generator

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
 POSTGRES_URL=
 POSTGRES_PRISMA_URL=
 SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 POSTGRES_URL_NON_POOLING=
 SUPABASE_JWT_SECRET=
 POSTGRES_USER=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 SUPABASE_SERVICE_ROLE_KEY=
 POSTGRES_HOST=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# Tournament API endpoint
+NEXT_PUBLIC_TOURNAMENT_API_ENDPOINT=https://redemption-tournament-api.vercel.app
