--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "edmonds-blossom": "^1.0.0",
     "flowbite-react": "^0.10.2",
     "geist": "^1.2.1",
     "lucide-react": "^0.456.0",
