--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next-themes": "^0.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "resend": "^6.7.0"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
