--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
     "@headlessui/react": "^2.2.9",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@vercel/blob": "^2.2.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -22,10 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "22.9.0",
-    "@types/react": "18.3.14",
+    "@types/react": "^19.0.0",
     "postcss": "8.4.49",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.14",
     "tailwindcss-animate": "^1.0.7",
