--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/typography": "^0.5.19",
     "@vercel/blob": "^2.2.0",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
@@ -19,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.1.0",
     "resend": "^6.7.0"
   },
   "devDependencies": {
